<resources>
    <string name="app_name">Recipeze</string>
    <string name="activity_settings">Einstellungen</string>
    <string name="navigation_drawer_opern">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_home">Start</string>
    <string name="navigation_profile">Mein Profil</string>
    <string name="navigation_note">Meine Notizen</string>
    <string name="navigation_shopping_list">Meine Einkaufsliste</string>
    <string name="navigation_favourite_dish">Lieblingsrezepte</string>
    <string name="navigation_settings">Einstellungen</string>
    <string name="save_button">Speichern</string>
    <string name="add_button">+</string>
    <string name="standard">00:00</string>
    <string name ="random_recipe">Zufälliges Rezpet</string>
    <string name="info_text">Info: weiß noch nicht was hier stehen soll</string>
    <string name="search_ingrediants">Rezepte nach Zutaten suchen</string>
    <string name="search_promts">Rezepte nach Stichworten suchen</string>

    <string name="foodsharing_button">food sharing</string>

    <string name="preferences">Verändern Sie Ihre App</string>

    <string name="preference_color">Farben</string>
    <string name="radio_group1_color_1">Gelb</string>
    <string name="radio_group1_color_2">Grün</string>
    <string name="radio_group1_color_3">Blau</string>
    <string name="radio_group1_color_4">Schwarz</string>
    <string name="radio_group1_color_5">Rot</string>

    <string name="preference_character_size">Schriftgröße</string>
    <string name="radio_group2_size_1">Klein</string>
    <string name="radio_group2_size_2">Mittel</string>
    <string name="radio_group2_size_3">Groß</string>

    <string name="preference_layout">Design</string>
    <string name="radio_group3_layout1">Layout 1</string>
    <string name="radio_group3_layout2">Layout 2</string>
    <string name="cookNowButton">Jetzt kochen</string>

    <string name="timerDoneNotification">Time is up! Go back to the recipe.</string>
    <string name="timerDefault">00:00:00</string>
    <string name="start">Start</string>
    <string name="hint">How many Minutes?</string>
    <string name="stop">Stop</string>
    <string name="e_mail_adresse">E-Mail Adresse</string>
    <string name="passwort_min6">Passwort (mind. 6 Zeichen)</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="create_profile">Profil erstellen</string>
    <string name="save">Speichern</string>
    <string name="recipeze">Recipeze</string>
    <string name="menu_text">Menüpunkte auswählen</string>
    <string name="add_recipe_head">Fügen Sie der Datenbank ein Rezept hinzu.</string>
    <string name="type_recipe_name">Rezeptname eingeben</string>
    <string name="type_short_description">Kurzbeschreibung eingeben</string>
    <string name="type_manual">Kochanleitung eingeben</string>
    <string name="type_ingredient">Zutaten eingeben</string>
    <string name="type_cooking_time">Kochzeit eingeben</string>
    <string name="recepe_upload">Rezept Hochladen</string>
    <string name="new_password6">Neues Passwort eingeben (mind. 6 Zeichen)</string>
    <string name="repeat_new_password">Neues Passwort bestätigen</string>
    <string name="make_notes">Notizen schreiben ...</string>
    <string name="my_email">Meine E-Mail Adresse:</string>
    <string name="example_email">bla@gmx.de</string>
    <string name="my_id">Meine Nutzer-ID:</string>
    <string name="id">id</string>
    <string name="change_password">Passwort ändern</string>
    <string name="change_email">E-Mail Adresse ändern</string>
    <string name="logout">Ausloggen</string>
    <string name="number">Anzahl ...</string>
    <string name="note_arcticle">Artikel aufschreiben ...</string>
    <string name="save_list">Liste speichern</string>
    <string name="add_article">Artikel hinzufügen</string>
    <string name="search">Suche</string>
    <string name="e_mail_adress">E-Mail Adresse</string>
    <string name="password">Passwort</string>
    <string name="log_in">Anmelden</string>
    <string name="register">Registrieren</string>
    <string name="set_timer">Kochuhr stellen</string>
    <string name="name">Name</string>
    <string name="cooking_manual">Kochanleitung</string>
    <string name="ingredients">Zutaten</string>
    <string name="short_discription">Kurzbeschreibung</string>
    <string name="quantity">Anzahl</string>


</resources>
