<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_settings"></item>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/navigation_profile"></item>
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_note"
            android:title="@string/navigation_note"></item>
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_shopping_list"
            android:title="@string/navigation_shopping_list"></item>
    </group>


</menu>