<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">





        <TextView
            android:id="@+id/addrecipe_maintext"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_head"
            android:textSize="20sp"
            android:backgroundTint="?colorPrimary"
            android:padding="10dp"
            android:gravity="center"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_below="@+id/addrecipe_maintext"

            android:id="@+id/addrecipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/type_recipe_name"
            />

        <EditText
            android:layout_below="@+id/addrecipe_name"

            android:id="@+id/addrecipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="@string/type_short_description"/>

        <EditText
            android:layout_below="@+id/addrecipe_description"

            android:id="@+id/addrecipe_instuctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="@string/type_manual"/>

        <EditText
            android:layout_below="@+id/addrecipe_instuctions"
            android:id="@+id/addrecipe_ingerdients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_ingredient"
            android:padding="20dp"
            />

        <EditText
            android:layout_below="@+id/addrecipe_ingerdients"
            android:id="@+id/addrecipe_cookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_cooking_time"
            android:padding="20dp"
            />

        <Button
            android:layout_below="@+id/addrecipe_cookingTime"
            android:padding="20dp"
            android:id="@+id/saverecipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recepe_upload"
            android:backgroundTint="?colorPrimary"
            />







</RelativeLayout>

