<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:id="@+id/Shopping_List_List_View">
    </ListView>


    <EditText
        android:id="@+id/Enter_Item_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:hint="@string/note_arcticle"
        android:imeOptions="actionDone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/Enter_Item_Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:hint="@string/number"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/Add_Shopping_Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_article"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="?colorPrimary"/>

    <Button
        android:id="@+id/Savebutton_Shopping_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_list"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="550dp"
        android:backgroundTint="?colorPrimary" />


</RelativeLayout>