<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?colorPrimaryDark"></View>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/searchrecipe_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_rounded_grey"
                    android:text="@string/search_promts"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/searchforingredients_button"
                    android:layout_width="match_parent"
                    android:background="@drawable/button_rounded_grey"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/search_ingrediants"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchrecipe_button" />


                <Button
                    android:id="@+id/random_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="?colorPrimary"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/random_recipe"
                    android:textColor="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_button"
                    app:layout_constraintStart_toStartOf="parent" />


                <Button
                    android:id="@+id/add_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="?colorPrimary"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/add_button"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/random_button" />




            </android.support.constraint.ConstraintLayout>

        </FrameLayout>

    </LinearLayout>










    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/burgermenu_header"
        app:menu="@menu/burger_menu" />

</android.support.v4.widget.DrawerLayout>